discussion/kv_engine/177002/177002_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create misc test suite in serverless tests

Change-Id: Icf84a5dcae7c8b7ecc00ff05bbdd68e57c672071

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 09:32:55.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47297/ : FAILURE

Failure of GoogleTest "AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerReceivesUserXattrsInDelete/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerReceivesUserXattrsInDelete/persistent_couchstore_full_eviction
unknown file: error: C++ exception with description "KVStoreFactory ctor: Specified dbname "ep_engine_ep_unit_tests.db/test.709701" is not a directory" thrown in SetUp().
unknown file: error: SEH exception with code 0xc0000005 thrown in TearDown().
[  FAILED  ] AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerReceivesUserXattrsInDelete/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (3 ms)
AllBucketTypes/SingleThreadedPassiveStreamTest.ConsumerReceivesUserXattrsInDelete/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47297/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18535/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:25:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:54:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:56:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->createBucket("TestDefaultThrottleLimit",
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:69:5: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    cluster->deleteBucket("TestDefaultThrottleLimit");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:76:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:93:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:115:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:133:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:173:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18535/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/misc_test.cc:25:18:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18535/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19643/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
[2022-07-03T08:16:03.994Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1331: Failure
[2022-07-03T08:16:03.994Z] Expected: (activeRR) < (100), actual: 100 vs 100
[2022-07-03T08:16:03.994Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (8315 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19643/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20421/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20421/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21409/ : FAILURE

Timeout of a CTest test [2022-07-03T08:19:42.781Z]   6/421 Test #251: ep-engine_ep_unit_tests.RangeScanFullAndValueEviction/RangeScanTest .....................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21409/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8208/ : FAILURE

Compile error at [2022-07-03T08:17:21.245Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8208/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17686/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39747/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28802/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8307/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20769/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
